Support reading from file in Expectation